commento.css: Fix comment overflow
commento.css: Fix comment overflow

--- a/assets/style/commento.css
+++ b/assets/style/commento.css
@@ -80,6 +80,7 @@
     margin-top: 0px;
     margin-bottom: 8px;
     border-top: 1px solid #f0f0f0;
+    word-wrap: break-word;
 }
 
 .commento .card-header {
